# monitoring-tool

./: MIGRATION.md  README.md  cleanup_and_test.py  fix_admin_and_test.py  fix_decimal_timezone_issues.py  fix_solution_data.py  fix_success_rate_display.py  make_api_public_for_testing.py  quick_setup.py  requirements.txt  test_admin_display_fix.py  test_api_with_auth.py  test_ticket_system.py  test_viewsets.py
apps/collectors/: apps.py  system_collector.py
apps/core/: admin.py  api_views.py  models.py  serializers.py  urls.py  utils.py
config/: celery.py  settings.py  urls.py
meeting-copilot/: .env.example  .gitignore  README.md  RUNNING.md  pyproject.toml
meeting-copilot/.venv-tmp/: pyvenv.cfg
meeting-copilot/src/copilot/: __init__.py  __main__.py  app.py  config.py  secrets.py
meeting-copilot/src/copilot/ai/: __init__.py  client.py  grounding.py  pipelines.py  prompts.py
meeting-copilot/src/copilot/audio/: __init__.py  backends.py  base.py  instructions.py
meeting-copilot/src/copilot/core/: __init__.py  engine.py  models.py
meeting-copilot/src/copilot/retrieval/: __init__.py  embeddings.py  store.py
meeting-copilot/src/copilot/store/: __init__.py  db.py
meeting-copilot/src/copilot/stt/: __init__.py  base.py  vad.py  whisper_backend.py
meeting-copilot/src/copilot/ui/: __init__.py  hotkeys.py  overlay.py  settings.py  tray.py
meeting-copilot/tests/: conftest.py  test_audio.py  test_config.py  test_engine.py  test_grounding.py  test_pipelines.py  test_retrieval.py  test_secrets.py  test_store.py  test_vad.py
(+6 files in other folders)
