[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-copilot"
version = "0.1.0"
description = "Background Meeting Co-pilot: passive system-audio capture, real-time transcription, grounded AI notes and suggestions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "santana-jay" }]
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

# Optional feature groups. The core (config, store, retrieval grounding,
# AI client, validation) is importable and testable without any of these.
[project.optional-dependencies]
ui = ["PySide6>=6.6"]
audio = ["sounddevice>=0.4.6", "soundfile>=0.12"]
audio-windows = ["PyAudioWPatch>=0.2.12"]
stt = ["faster-whisper>=1.0"]
retrieval = ["sentence-transformers>=2.5"]
ai = ["anthropic>=0.34"]
secrets = ["keyring>=24.0"]
hotkeys = ["pynput>=1.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
meeting-copilot = "copilot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
